# ganzo

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
src/ganzo/: __main__.py  cli.py  cmd.py  core.py  resolvers.py  sources.py
src/ganzo/sources/: __init__.py  gcs.py  git.py  local.py
src/tests/: test_ganzo.py  test_sources.py
src/tests/fixtures/home/: configuration.json 
src/tests/fixtures/templates/: templates-git.list
src/tests/fixtures/templates/example/: another_file.txt.nzo  some_file.txt
