[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ganzo"
version = "0.1.0"
description = "Projects generator from templates"
readme = "README.md"
requires-python=">=3.6,<4.0.0"
dynamic = ["dependencies", "optional-dependencies"]

[project.scripts]
ganzo = "ganzo.cmd:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ganzo*"]
namespaces = true

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ["requirements-dev.txt"]}
pub = {file = ["requirements-pub.txt"]}

[tool.pytest.ini_options]
addopts = "-ra -q -vv --cov=ganzo"
testpaths = ["src/tests"]

[tool.pylint.MASTER]
disable = ["C0114", "C0115", "C0116"]

[tool.bandit]
exclude_dirs = ["src/tests"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
